--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
 
       <div class="container">
          <div class="col mt-1 d-md-none">
-            <img class="img-fluid img" src="/multimedia/astanga.webp" alt="Astanga pose" />
+            <img class="img-fluid img" src="multimedia/astanga.webp" alt="Astanga pose" />
             <p>Guided instructions in mindfulness meditation practices</p>
 
-            <img class="img-fluid img" src="/multimedia/vila.jpg" alt="Vila in Bale" />
+            <img class="img-fluid img" src="multimedia/vila.jpg" alt="Vila in Bale" />
             <p>Accommodation in amazing villa with swimming pool</p>
 
-            <img class="img-fluid img" src="/multimedia/chef.jpg" alt="Chef preparing food" />
+            <img class="img-fluid img" src="multimedia/chef.jpg" alt="Chef preparing food" />
             <p>On site private chef  </p>
 
-            <img class="img-fluid img" src="/multimedia/food.webp" alt="Vegetarian food" />
+            <img class="img-fluid img" src="multimedia/food.webp" alt="Vegetarian food" />
             <p>Tasteful domestic food from local farmers</p>
 
-            <img class="img-fluid img" src="/multimedia/hiking.webp" alt="Hiking in Istria" />
+            <img class="img-fluid img" src="multimedia/hiking.webp" alt="Hiking in Istria" />
             <p>Excursions and trips to amazing places</p>
 
-            <img class="img-fluid img" src="/multimedia/yoga.webp" alt="Group yoga class" />
+            <img class="img-fluid img" src="multimedia/yoga.webp" alt="Group yoga class" />
             <p>Yoga class demo</p>
          </div>
 
@@ -166,7 +166,7 @@
                   <div class="col-md-6">
                      <img
                         class="img-fluid img"
-                        src="/multimedia/astanga.webp"
+                        src="multimedia/astanga.webp"
                         alt="Astanga pose"
                      />
                      <p>
@@ -174,7 +174,7 @@
                      </p>
                   </div>
                   <div class="col-md-6">
-                     <img class="img-fluid img" src="/multimedia/vila.jpg" alt="Vila in Bale" />
+                     <img class="img-fluid img" src="multimedia/vila.jpg" alt="Vila in Bale" />
                      <p>
                         Accommodation in amazing villa with swimming pool
                      </p>
@@ -185,7 +185,7 @@
                   <div class="col-md-6">
                      <img
                         class="img-fluid img"
-                        src="/multimedia/chef.jpg"
+                        src="multimedia/chef.jpg"
                         alt="Chef preparing food"
                      />
                      <p>
@@ -196,7 +196,7 @@
                   <div class="col-md-6">
                      <img
                         class="img-fluid img"
-                        src="/multimedia/food.webp"
+                        src="multimedia/food.webp"
                         alt="Vegetarian food"
                      />
                      <p>
@@ -209,7 +209,7 @@
                   <div class="col-md-6">
                      <img
                         class="img-fluid img"
-                        src="/multimedia/hiking.webp"
+                        src="multimedia/hiking.webp"
                         alt="Hiking in Istria"
                      />
                      <p>
@@ -220,7 +220,7 @@
                   <div class="col-md-6">
                      <img
                         class="img-fluid img"
-                        src="/multimedia/yoga.webp"
+                        src="multimedia/yoga.webp"
                         alt="Group yoga class"
                      />
                      <p>
@@ -299,7 +299,7 @@
                   <div class="about-us-img-l">
                      <img
                         class="img-fluid img "
-                        src="/multimedia/ksenija.jpg"
+                        src="multimedia/ksenija.jpg"
                         alt="Picture of Ksenija, yoga teacher"
                      />
                      <p style="margin: 0">Ksenija Brajkovic Yoga teacher</p>
@@ -331,7 +331,7 @@
                   <div class="about-us-img-r">
                      <img
                         class="img-fluid img"
-                        src="/multimedia/chef1.webp"
+                        src="multimedia/chef1.webp"
                         alt="Picture of the chef"
                      />
                      <p style="margin: 0">Tomislav Brajkovic, chef</p>
@@ -358,7 +358,7 @@
                   <div class="about-us-img-l">
                      <img
                         class="img-fluid img "
-                        src="/multimedia/driver4.webp"
+                        src="multimedia/driver4.webp"
                         alt="Image of driver"
                      />
                      <p style="margin: 0">Drazen Modric, personal driver and tour guide</p>
